--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -15,7 +15,7 @@
   <dt>Description</dt>
   <dd><%= @movie.description %></dd>
 
-  <dt>Director ID</dt>
+  <dt>Movie ID</dt>
   <dd><%= @movie.director_id %></dd>
 
   <dt>Image</dt>
